add back-end esqueci minha senha

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -64,3 +64,7 @@
     border-style: solid;
     border-color:#ff9d25;
   }
+
+  .collapse-colors{
+    background-color: rgba(132, 46, 176, 0.3);
+  }
