--- a/app/assets/stylesheets/corona.scss
+++ b/app/assets/stylesheets/corona.scss
@@ -474,7 +474,18 @@ pre {
 @media (min-width: 420px) {
   .container, .container-mb {
     max-width: 414px; } }
-
+    @media (min-width: 576px) {
+      .container {
+        max-width: 540px; } }
+    @media (min-width: 768px) {
+      .container {
+        max-width: 720px; } }
+    @media (min-width: 992px) {
+      .container {
+        max-width: 960px; } }
+    @media (min-width: 1200px) {
+      .container {
+        max-width: 1140px; } }
 .row {
   display: flex;
   flex-wrap: wrap;
