--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,4 +1,5 @@
 <% if resource.errors.any? %>
+<%= render "layouts/erros_modal" do %>
   <div id="error_explanation">
     <h2 class="errors">
       <%= I18n.t("errors.messages.not_saved",
@@ -12,4 +13,5 @@
       <% end %>
     </ul>
   </div>
+  <% end %>
 <% end %>
