--- a/app/views/layouts/_erros_modal.html.erb
+++ b/app/views/layouts/_erros_modal.html.erb
@@ -3,7 +3,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
-            <img src="<%= image_url('icon-chat.png') %>" width="40" height="35" class="d-inline-block align-top displayed"
+            <img src="<%= image_url('icone.png') %>" width="40" height="35" class="d-inline-block align-top displayed"
               alt="logo os incriveis" style="margin-left: 10px;">
 
               <h5 class="modal-title titulo-modal" id="exampleModalLabel" style="margin-right: 15px;" >  Opa, algo deu errado :(</h5>
