--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-  <nav class="navbar navbar-expand-lg navbar-light" style="margin-bottom: 0px; position: sticky;  top: 0; z-index: 1071; background-color: rgb(243, 243, 243);">
+  <nav class="navbar navbar-expand-sm navbar-light" style="margin-bottom: 0px; position: sticky;  top: 0; z-index: 1071; background-color: rgb(243, 243, 243);">
     <div>
       <a align="left" href="/">
         <img src="<%= image_url('logo-dark.png') %> " class="logo-covid">
