--- a/app/views/informations/show.html.erb
+++ b/app/views/informations/show.html.erb
@@ -1,159 +1,225 @@
+<body>
 <section>
-
 
   <div class="container-menor">
     <div class="row">
-      <div class="col">
+      <div class="col-sm">
         <p class="titulo-h2" style="position: relative; top: 60px; left: 60px;">Olá <%= @user.name %>,</p><br>
         <p class="subtitulo">Viemos aqui te orientar e dar algumas dicas de<br>
         como se prevenir do novo covid-19.</p>
       </div>
-      <div align="right" class="col">
+      <div align="right" class="col-sm">
         <img src="<%= image_url('contra.png') %>" class="minha-area" alt="simbolo corona virus">
       </div>
     </div>
   </div>
 
-  <!-- <div>
-    O novo coronavírus é parente do vírus causador da SARS (sigla inglesa para síndrome respiratória aguda grave).
-    Pacientes com doenças mais debilitantes têm menor capacidade de frear o vírus, aumentando o risco de ele cair na corrente sanguínea, atingir os pulmões e provocar pneumonia.
-    "Em geral, pessoas com doenças crônicas estão em maior risco por causa do comprometimento da resposta imune. A possibilidade da intensidade da replicação viral, acaba deflagrando uma 
-    lesão pulmonar que vai agravar o quadro do paciente", explica Luciana Costa, diretora adjunta do Instituto de Microbiologia da UFRJ e do Laboratório de Genética e Imunologia das Infecções Virais.
-  </div> -->
 <!-- -------------------------- grupo de risco ------------------ -->
-  <div class="container-maior">
-    <div style="margin: 60px 40px 0 40px;">
+  <div class="container-maior container-sm">
+    <div class="margem">
       <div class="row">
-        <div class="col">
+        <div class="col-sm">
           <p class="titulo-h3">Você está no grupo de risco, sendo mais suscetível a complicações do novo coronavírus.</p>
-          <p class="subtitulo-laranja">Sendo assim, você precisa reforçar alguns cuidados e medidas para combater o vírus:</p>
+          <p class="subtitulo-cinza">Sendo assim, você precisa reforçar alguns cuidados e medidas para combater o vírus:</p>
       </div>
-      <div class="col" align="center">
+      <div class="col-sm" align="center">
         <img src="<%= image_url('risco.png') %>" class="risco" alt="grupo de risco">
       </div>
     </div>
 
+    <div class="row" style="padding-bottom: 50px;">
+      <div class="col-sm" style="height: 350px;">
+        <p class="texto">• Higienização frequente das mãos com água e sabonete (durante 30s) ou álcool gel a 70%;</p><br>
+        <img src="<%= image_url('maos.png') %>" style="width: 150px; height: 150px; position: relative; left: 130px; top: 20px" alt="dar as mãos">
+      </div>
+      <div class="col-sm" style="background-color: rgb(236, 236, 236);height: 350px;">
+        <p class="texto">• Seguir a “etiqueta respiratória” quando possível:</p><br>
+        <img src="<%= image_url('etiqueta1.jpeg') %>" style="width: 360px; height: 230px; position: relative; left: 30px; top: 20px" alt="dar as mãos">
+      </div>
 
-      • Higienização frequente das mãos com água e sabonete (durante 30s) ou álcool gel a 70%;
-      • Seguir a “etiqueta respiratória” quando possível:
-        Cobrir a boca e nariz com um lenço de papel quando tossir ou espirrar e descartar o lenço usado no lixo;
-        Caso não tenha disponível lenço descartável, tossir ou espirrar no antebraço e não em suas mãos, que são importantes veículos de contaminação; 
-        Higienizar as mãos com frequência e sempre após tossir ou espirrar;
-        Evitar tocar nos olhos, nariz e boca sem ter higienizado as mãos;
-        Usar máscara cirúrgica se estiver com coriza ou tosse.
+      <div class="col-sm" style="height: 350px;">
+        <p class="texto">• Restrição de contato social (exceto cuidadores e profissionais de saúde, quando necessário);</p><br>
+        <img src="<%= image_url('bonecos.png') %>" style="width: 360px; height: 230px; position: relative; left: 30px" alt="dar as mãos">
+      </div>
+    </div>
 
-      • Restrição de contato social (exceto cuidadores e profissionais de saúde, quando necessário);
+    <div class="row">
+      <div class="col-sm " style="background-color: rgb(236, 236, 236);height: 350px;">
+        <p class="texto">• Evitar aglomerações e viagens;</p><br>
+        <img src="<%= image_url('aglomeracao.png') %>" style="width: 150px; height: 150px; position: relative; left: 130px; top: 20px" alt="dar as mãos">
+      </div>
 
-      • Evitar aglomerações e viagens;
+      <div class="col-sm" style="height: 350px;">
+        <p class="texto">• Evitar atividades em grupo;</p><br>
+        <img src="<%= image_url('grupo.png') %>" style="width: 250px; height: 200px; position: relative; left: 80px; top: 20px" alt="dar as mãos">
+      </div>
 
-      • Evitar atividades em grupo;
-
-      • Atenção redobrada aos cuidados com a higiene pessoal (em especial às pessoas com deficiência intelectual e motora com alto grau de dependência)
-
-      É importante ressaltar que a criança com deficiência faz parte do grupo de risco, incluindo:
-
-      Paralisia Cerebral;
-      Microcefalia;
-      Síndrome de Down;
-      Transtorno do Espectro Autista (TEA)
-      Esclerose Lateral Amiotrófica (ELA);
-      Atrofia Muscular Espinha (AME);
-      Esclerose Múltipla;
-      Distrofias Musculares;
-      Demais síndromes;
-      E outras condições semelhantes.
+      <div class="col-sm texto" style="background-color: rgb(236, 236, 236);height: 350px;">
+        <p class="texto">• Atenção redobrada aos cuidados com a higiene pessoal (em especial às pessoas com deficiência intelectual e motora com alto grau de dependência)</p><br>
+        <img src="<%= image_url('higiene.png') %>" style="width: 200px; height: 180px; position: relative; left: 90px; top: 20px" alt="dar as mãos">
+      </div>
+    </div>
   </div>
   </div>
 
+    <div class="container-azul">
+      <div class="row subtitulo padding" style="position: relative; font-size: 20px; left: 0;">
+        <p class="titulo-h2" style="font-size: 30px; margin-bottom: 0;">É importante ressaltar que a criança com deficiência faz parte do grupo de risco, incluindo:</p><br><br>
+        • Paralisia Cerebral;<br>
+        • Microcefalia;<br>
+        • Síndrome de Down;<br>
+        • Transtorno do Espectro Autista (TEA);<br>
+        • Esclerose Lateral Amiotrófica (ELA);<br>
+        • Atrofia Muscular Espinha (AME);<br>
+        • Esclerose Múltipla;<br>
+        • Distrofias Musculares;<br>
+        • Demais síndromes;<br>
+        • E outras condições semelhantes.<br>
+        <img src="<%= image_url('crianca.png') %>" class="deficiente" style="width: 600px; height: 350px; position: relative; left: 400px; top: 30px;" alt="deficiente">
+      </div>
+    </div>
 
-  <div>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d14639.433016428047!2d-46.3145073!3d-23.4655769!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1590104375065!5m2!1spt-BR!2sbr"
-      width="700"
-      height="400"
-      frameborder="0"
-      style="border: 0;"
-      allowfullscreen=""
-      aria-hidden="false"
-      tabindex="0"
-    ></iframe>
+<!-- ------------------------- hipertensao ------------------- -->
+  <div class="row">
+    
+  </div>
+
+
+
+<!-- ------------------  todos -->
+<div class="container-corona">
+  <div class="row padding">
+  <div class="subtitulo-cinza col-8" style="line-height: 40px; font-size: 20px;">
+    O novo <b>coronavírus</b> é parente do vírus causador da SARS (sigla inglesa para síndrome respiratória aguda grave).<br><br>
+    Pacientes com doenças mais debilitantes têm menor capacidade de frear o vírus, aumentando o risco de ele cair na corrente sanguínea, atingir os pulmões e provocar pneumonia.<br><br>
+    <i>"Em geral, pessoas com doenças crônicas estão em maior risco por causa do comprometimento da resposta imune. A possibilidade da intensidade da replicação viral, acaba deflagrando uma
+    lesão pulmonar que vai agravar o quadro do paciente"</i>, explica Luciana Costa, diretora adjunta do Instituto de Microbiologia da UFRJ e do Laboratório de Genética e Imunologia das Infecções Virais.<br><br>
+    Por isso é muito importante estar com a imunidade em dia e sempre usar álcool em gel ou lavar as mãos frequentemente. Abaixo, explicamos quais e por que alguns grupos de riscos estão mais vulneráveis à doença e como se prevenir.
+  </div>
+  <div class="col-4">
+    <img src="<%= image_url('corona.png') %>" style="width: 200px; height: 200px; position: relative; left: 80px; top: 70px;" alt="simbolo-corona">
   </div>
 </div>
+</div>
+
+  <div class="container-azul" style="height: 600px;">
+    <div class="row padding">
+      <div class="col-sm">
+        <p class="titulo-h2" style="font-size: 35px;">Caso esteja com algum sintoma,<br> consulte o hospital mais próximo!</p><br>
+        <img src="<%= image_url('medico-corona.png') %>" class="imagem-medico" style="width: 350px; height: 350px; position: relative; left: 80px;" alt="simbolo-corona">
+      </div>
+      <div class="col-sm" style="position: relative; top: 50px;">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d14639.433016428047!2d-46.3145073!3d-23.4655769!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1590104375065!5m2!1spt-BR!2sbr"
+          width="700"
+          height="400"
+          frameborder="0"
+          style="border: 0;"
+          allowfullscreen=""
+          aria-hidden="false"
+          tabindex="0"
+        ></iframe>
+      </div>
+    </div>
+  </div>
+<!-- -----------------------------  -->
 </section>
 
 <style>
-.minha-area {
-  position: relative;
-  right: 100px;
-  top: 120px;
-  width: 600px;
-  position: relative;
-}
-.risco {
-  height: 400px;
-}
+    .minha-area {
+      position: relative;
+      right: 100px;
+      top: 100px;
+      width: 600px;
+      position: relative;
+    }
+    .container-azul {
+      background-color: #96b2e7;
+      height: 550px;
+      border-radius: 0 0 50px 50px;
+    }
+    .margem {
+      margin: 60px 40px 0 40px;
+    }
+    .risco {
+      height: 400px;
+      margin-bottom: 80px;
+    }
+    .container-corona {
+      height: 800px;
+    }
+
+    .padding {
+      padding: 60px 40px 0 40px;
+    }
+
+    .texto {
+        font-family: 'Roboto', sans-serif;
+        color: #191970;
+        font-size: 16px;
+        position: relative;
+        top: 20px;
+      }
 
 
-.imagem {
-  background-image: url(/assets/shape-b.png);
-  background-color: #9DBFFF;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 400px;
-}
+    .container-menor {
+      height: 300px;
+      background-image: url(/assets/azul.jpeg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      border-radius: 0 0 50px 50px;
+      height: 400px;
+    }
 
-.container-menor {
-  height: 300px;
-  background-image: url(/assets/azul.jpeg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 0 0 50px 50px;
-  height: 400px;
-}
+    .container-maior {
+      height: 1300px;
+    }
 
-.container-maior {
-  height: 900px;
-}
+    .subtitulo {
+        font-family: 'Raleway', sans-serif;
+        color: #191970;
+        font-size: 25px;
+        position: relative;
+        left: 60px;
+        top: 20px;
+      }
 
-.subtitulo {
-    font-family: 'Raleway', sans-serif;
-    color: #191970;
-    font-size: 25px;
-    position: relative;
-    left: 60px;
-    top: 20px;
-  }
+    .subtitulo-laranja {
+      font-family: 'Raleway', sans-serif;
+      color: #ff8d02;
+      font-size: 25px;
+      position: relative;
+    }
+    .subtitulo-cinza {
+      font-family: 'Raleway', sans-serif;
+      color: #626262;
+      font-size: 25px;
+      position: relative;
+    }
 
-  .subtitulo-laranja {
-    font-family: 'Raleway', sans-serif;
-    color: #ff8d02;
-    font-size: 25px;
-    position: relative;
-  }
+    .col {
+      padding: 0;
+    }
 
+    .row {
+      margin: 0;
+    }
 
-.col {
-  padding: 0;
-}
+    .titulo-h2 {
+        font-family: 'Oswald-Bold', sans-serif;
+        font-size: 50px;
+        color: #191970;
+        margin-bottom: 40px;
+    }
 
-.row {
-  margin: 0;
-}
+    .titulo-h3 {
+        font-family: 'Oswald-Bold', sans-serif;
+        font-size: 40px;
+        color: #ff8d02;
+        margin-bottom: 40px;
+    }
 
-
-.titulo-h2 {
-    font-family: 'Oswald-Bold', sans-serif;
-    font-size: 50px;
-    color: #191970;
-    margin-bottom: 40px;
-}
-
-.titulo-h3 {
-    font-family: 'Oswald-Bold', sans-serif;
-    font-size: 40px;
-    color: #ff8d02;
-    margin-bottom: 40px;
-}
 
 </style>
+</body>
 
