--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,196 @@
-<h2>Change your password</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Covid-19</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=320px">
+  <meta name="viewport" content="height=device-height">
+
+  <meta name="csrf-param" content="authenticity_token" />
+<meta name="csrf-token" content="bdb+LaoVn/FGIE2hnIONrngldhQgnm5xb0ueEEywxWff0XwMTMXtKghCl2Ci2KBw61L9fWiwFQWK28Gpl1LRGg==" />
+   <style type="text/css">
+    /* CSS reset */
+*, *:before, { 
+  margin:0;
+  padding:0;
+  font-family: roboto,sans-serif;
+}
+ 
+ .container{
+  width: 95vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+/* remove a linha dos links */
+a{
+  text-decoration: none;
+}
+ 
+/* esconde as ancoras da tela */
+a.links{
+  display: none;
+}
+.content{
+  width: 400px;
+  min-height: 560px;    
+  margin: 0px auto;
+  position: relative;
+
+}
+h1{
+  font-size: 29px;
+  color: #fff;
+  padding: 2px 0 0px 0;
+  font-family: Roboto,sans-serif;
+  font-weight: bold;
+  text-align: center;
+  padding-bottom: 0px;
+}
+h1:after{
+  content: ' ';
+  display: block;
+  width: 100%;
+  height: 2px;
+  margin-top: 10px;
+  background: #4599CE;
+}
+p{
+  margin-bottom:15px;
+}
+ 
+.content p:first-child{
+  margin: 0px;
+}
+ 
+ 
+label{
+  color: #fff;
+  padding-left:39px;
+    
+}
+  /* placeholder */
+::-webkit-input-placeholder  {
+  color: #bebcbc; 
+  font-style: italic;
+}
+ 
+input:-moz-placeholder,
+textarea:-moz-placeholder{
+  color: #bebcbc;
+  
+  
+}
+input {
+  outline: none;
+
+  
+}
+a{
+  color: #fff;
+  padding-left:43px;
+}
+/*estilo dos input,  menos o checkbox */
+input:not([type="checkbox"]){
+ width: 70%;
+  margin-top: 4px;
+  padding: 10px;    
+  border: 0px  #b2b2b2;
+  position: relative;
+  display: block;margin: 0 auto;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+/*estilo do botão submit */
+input[type="actions"]{
+  width: 70%;
+  cursor: pointer;  
+  background: #4484cb;
+  padding: 8px 5px;
+  color: #fff;
+  font-size: 20px;  
+  border: 0px solid #fff;   
+  margin-bottom: 10px;  
+  display: block;
+  position: absolute;
+  margin: 0 auto;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  transition: all 0.2s linear;
+}
+/*estilo do botão submit no hover */
+input[type="actions"]:hover{
+  background: #4ab3c6;
+ 
+
+}
+
+#recuperar{
+  position: relative;
+  top: 0px;
+  width: 79%;   
+  padding: 18px 6% 60px 6%;
+  margin: 0 0 35px 0;
+  background: #9b7ca3;
+  border-radius: 5px;
+  -webkit-animation-duration: 0.5s;
+  -webkit-animation-timing-function: ease;
+  -webkit-animation-fill-mode: both;
+  animation-duration: 0.5s;
+  animation-timing-function: ease;
+  animation-fill-mode: both;
+}
+/* Efeito ao clicar no botão  */
+
+#paralogin:target ~ .content #recuperar{
+  z-index: 2;
+  -webkit-animation-name: fadeInLeft;
+  animation-name: fadeInLeft;
+  -webkit-animation-delay: .1s;
+  animation-delay: .1s;
+}
+</style>
+</head>
+<body style="background-image: url(<%= asset_path("fundotr.png")%>); background-repeat: no-repeat">
+
+<div class="container">
+<
+<form class="new_user" id="new_user" action="/users/password" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="put" /><input type="hidden" name="authenticity_token" value="8fvseq9KZ0cjTBAmsAPYTqn03ZwbgyNSnuJid3Njs5OwD35AMQ8maCARTx8BBRc7UwqCCPMakqbHT7Oo07R+9g==" />
+  <div class="field">
+
+    <div class="content">
+      <div id="recuperar">
+         <form method="post" action=""> 
+          <h1>Mudança de Senha</h1>
+          <p>
+            <label for="user_password">Nova Senha</label>
+            <input autofocus="autofocus" autocomplete="new-password" type="password" name="user[password]" id="user_password" placeholder="Mínimo de 6 caracteres" />
+          </p>
 
   <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
+      <form method="post" action=""> 
+          <p>
+            <label for="user_password_confirmation">Confirme a nova senha</label><br />
+            <input autocomplete="new-password" type="password" name="user[password_confirmation]" id="user_password_confirmation" />
+          </p>
+          <p>
+            <div class="actions">
+            <input type="submit" name="commit" value="CONFIRMAR" data-disable-with="Mudando" />
+          </p>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
+      </div>
+    </div>
+  </div>  
+  <script>
+    $('#errors-modal').modal('show');
+  </script>
+</body>
 
-<%= render "devise/shared/links" %>
+</html>
