ajuste de resetar senha

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -10,11 +10,7 @@
   text-align: center;
 }
 
-.modal{
-  color:  rgb(132, 46, 176);
-  font-family: futura;
-  opacity: 1;
-}
+
 .titulo-modal {
   font-family: 'Oswald-Bold', sans-serif;
   font-size: 20px;
@@ -26,6 +22,7 @@
   font-family: 'Roboto', sans-serif;
   color: #191970;
   font-size: 14px;
+  left: 20px;
   line-height: 25px;
 }
 
