--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,6 +1,158 @@
+<style type="text/css">
+  /* CSS reset */
+*, *:before {
+margin:0;
+padding:0;
+font-family: roboto,sans-serif;
+}
+.container{
+width: 95vw;
+height: 100vh;
+display: flex;
+justify-content: center;
+align-items: center;
 
-<!DOCTYPE html>
-<html>
+}
+/* remove a linha dos links */
+a{
+text-decoration: none;
+}
+
+/* esconde as ancoras da tela */
+a.links{
+display: none;
+}
+.content{
+width: 400px;
+min-height: 560px;
+margin: 0px auto;
+position: relative;
+
+}
+h1{
+font-size: 29px;
+color: #fff;
+padding: 2px 0 0px 0;
+font-family: Roboto,sans-serif;
+font-weight: bold;
+text-align: center;
+padding-bottom: 30px;
+}
+h1:after{
+content: ' ';
+display: block;
+width: 100%;
+height: 2px;
+margin-top: 10px;
+background: #4599CE;
+}
+p{
+margin-bottom:15px;
+}
+
+.content p:first-child{
+margin: 0px;
+}
+
+
+label{
+color: #fff;
+padding-left:39px;
+font-size: 16px;
+}
+/* placeholder */
+::-webkit-input-placeholder  {
+color: #bebcbc; 
+font-style: italic;
+}
+
+input:-moz-placeholder,
+textarea:-moz-placeholder{
+color: #bebcbc;
+
+
+}
+input {
+outline: none;
+
+
+}
+a{
+color: #fff;
+padding-left:43px;
+}
+/*estilo dos input,  menos o checkbox */
+input:not([type="checkbox"]){
+width: 80%;
+margin-top: 4px;
+padding: 10px;
+border-color: #4776a1;
+position: relative;
+display: block;
+margin: 0 auto;
+-webkit-border-radius: 3px;
+border-radius: 3px;
+-webkit-transition: all 0.2s linear;
+transition: all 0.2s linear;
+}
+/*estilo do botão submit */
+input[type="submit"]{
+width: 70%;
+cursor: pointer;  
+background: #00bfff;
+padding: 8px 5px;
+color: #fff;
+font-size: 20px;  
+border: 0px solid #fff;   
+margin-bottom: 10px;  
+display: block;
+position: absolute;
+margin: 0 auto;
+left: 60px;
+-webkit-border-radius: 5px;
+border-radius: 5px;
+transition: all 0.2s linear;
+}
+/*estilo do botão submit no hover */
+input[type="submit"]:hover{
+background: #4ab3c6;
+
+
+}
+
+.form-text {
+ color: #fff !important;
+ position: relative;
+ left: 35px;
+ font-weight: 100;
+}
+
+#recuperar{
+position: relative;
+top: 0px;
+height: 500px;
+padding: 18px 6% 60px 6%;
+margin: 0 0 35px 0;
+background: #4776a1;
+border-radius: 5px;
+-webkit-animation-duration: 0.5s;
+-webkit-animation-timing-function: ease;
+-webkit-animation-fill-mode: both;
+animation-duration: 0.5s;
+animation-timing-function: ease;
+animation-fill-mode: both;
+}
+/* Efeito ao clicar no botão  */
+
+#paralogin:target ~ .content #recuperar{
+z-index: 2;
+-webkit-animation-name: fadeInLeft;
+animation-name: fadeInLeft;
+-webkit-animation-delay: .1s;
+animation-delay: .1s;
+}
+</style>
+
 
 <head>
   <title>Covid-19</title>
@@ -8,189 +160,122 @@
   <meta name="viewport" content="width=320px">
   <meta name="viewport" content="height=device-height">
 
-  <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="bdb+LaoVn/FGIE2hnIONrngldhQgnm5xb0ueEEywxWff0XwMTMXtKghCl2Ci2KBw61L9fWiwFQWK28Gpl1LRGg==" />
-   <style type="text/css">
-    /* CSS reset */
-*, *:before, { 
-  margin:0;
-  padding:0;
-  font-family: roboto,sans-serif;
-}
- 
- .container{
-  width: 95vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-}
-/* remove a linha dos links */
-a{
-  text-decoration: none;
-}
- 
-/* esconde as ancoras da tela */
-a.links{
-  display: none;
-}
-.content{
-  width: 400px;
-  min-height: 560px;    
-  margin: 0px auto;
-  position: relative;
-
-}
-h1{
-  font-size: 29px;
-  color: #fff;
-  padding: 2px 0 0px 0;
-  font-family: Roboto,sans-serif;
-  font-weight: bold;
-  text-align: center;
-  padding-bottom: 0px;
-}
-h1:after{
-  content: ' ';
-  display: block;
-  width: 100%;
-  height: 2px;
-  margin-top: 10px;
-  background: #4599CE;
-}
-p{
-  margin-bottom:15px;
-}
- 
-.content p:first-child{
-  margin: 0px;
-}
- 
- 
-label{
-  color: #fff;
-  padding-left:39px;
-    
-}
-  /* placeholder */
-::-webkit-input-placeholder  {
-  color: #bebcbc; 
-  font-style: italic;
-}
- 
-input:-moz-placeholder,
-textarea:-moz-placeholder{
-  color: #bebcbc;
-  
-  
-}
-input {
-  outline: none;
-
-  
-}
-a{
-  color: #fff;
-  padding-left:43px;
-}
-/*estilo dos input,  menos o checkbox */
-input:not([type="checkbox"]){
- width: 70%;
-  margin-top: 4px;
-  padding: 10px;    
-  border: 0px  #b2b2b2;
-  position: relative;
-  display: block;margin: 0 auto;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-transition: all 0.2s linear;
-  transition: all 0.2s linear;
-}
-/*estilo do botão submit */
-input[type="actions"]{
-  width: 70%;
-  cursor: pointer;  
-  background: #4484cb;
-  padding: 8px 5px;
-  color: #fff;
-  font-size: 20px;  
-  border: 0px solid #fff;   
-  margin-bottom: 10px;  
-  display: block;
-  position: absolute;
-  margin: 0 auto;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  transition: all 0.2s linear;
-}
-/*estilo do botão submit no hover */
-input[type="actions"]:hover{
-  background: #4ab3c6;
- 
-
-}
-
-#recuperar{
-  position: relative;
-  top: 0px;
-  width: 79%;   
-  padding: 18px 6% 60px 6%;
-  margin: 0 0 35px 0;
-  background: #9b7ca3;
-  border-radius: 5px;
-  -webkit-animation-duration: 0.5s;
-  -webkit-animation-timing-function: ease;
-  -webkit-animation-fill-mode: both;
-  animation-duration: 0.5s;
-  animation-timing-function: ease;
-  animation-fill-mode: both;
-}
-/* Efeito ao clicar no botão  */
-
-#paralogin:target ~ .content #recuperar{
-  z-index: 2;
-  -webkit-animation-name: fadeInLeft;
-  animation-name: fadeInLeft;
-  -webkit-animation-delay: .1s;
-  animation-delay: .1s;
-}
-</style>
 </head>
 <body style="background-image: url(<%= asset_path("fundotr.png")%>); background-repeat: no-repeat">
-
+  <div style="margin-top: 100px;">
+  </div>
 <div class="container">
-<
-<form class="new_user" id="new_user" action="/users/password" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="put" /><input type="hidden" name="authenticity_token" value="8fvseq9KZ0cjTBAmsAPYTqn03ZwbgyNSnuJid3Njs5OwD35AMQ8maCARTx8BBRc7UwqCCPMakqbHT7Oo07R+9g==" />
-  <div class="field">
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= f.hidden_field :reset_password_token %>
+    <div class="field">
 
-    <div class="content">
-      <div id="recuperar">
-         <form method="post" action=""> 
-          <h1>Mudança de Senha</h1>
-          <p>
-            <label for="user_password">Nova Senha</label>
-            <input autofocus="autofocus" autocomplete="new-password" type="password" name="user[password]" id="user_password" placeholder="Mínimo de 6 caracteres" />
-          </p>
+      <div class="content">
+        <div id="recuperar">
+          <form method="post" action=""> 
+            <h1>Mudança de Senha</h1>
+            <p>
+              <label for="user_password">Nova Senha</label>
+              <div data-placement="right" data-trigger= "manual" data-toggle="popover" data-content="Senha inválida" id ="text-senha">
+                <input autofocus="autofocus" autocomplete="new-password" type="password" name="user[password]" id="user_password"/>
+                <small id="senhaHelp" class="form-text text-muted">A senha deve conter 8 Caracteres: Letra Maiúscula e
+                </br> Minúscula,
+                Caracter especial e Número</small>
+            </div>
+            </p>
 
-  <div class="field">
-      <form method="post" action=""> 
-          <p>
-            <label for="user_password_confirmation">Confirme a nova senha</label><br />
-            <input autocomplete="new-password" type="password" name="user[password_confirmation]" id="user_password_confirmation" />
-          </p>
-          <p>
-            <div class="actions">
-            <input type="submit" name="commit" value="CONFIRMAR" data-disable-with="Mudando" />
-          </p>
-
-
+        <div class="field">
+            <form method="post" action="">
+                <p>
+                  <label for="user_password_confirmation">Confirme a nova senha</label><br />
+                  <div data-placement="right" data-trigger= "manual" data-toggle="popover" data-content="Senhas não conferem" id ="text-senhaconf">
+                    <input autocomplete="new-password" type="password" name="user[password_confirmation]" id="user_password_confirmation" /><br><br>
+                  </div>
+                </p>
+                <p>
+                  <input type="submit" name="commit" value="CONFIRMAR" data-disable-with="Realizando mudança..." />
+                </p>
+          </div>
+        </div>
       </div>
     </div>
-  </div>  
-  <script>
+<% end %>
+
+  <script type="text/javascript">
+    var password = new RegExp('(?=^.{8,}$)(?=.*[0-9])(?=.*[A-Z])(?=.*[a-z])(?=.*[^A-Za-z0-9]).*');
     $('#errors-modal').modal('show');
+
+
+    $(document).ready(function () {
+      $("#user_password").keyup(function () {
+        var VAL = this.value;
+  
+        // Se o campo senha começar a ser preenchido.
+        if($(this).val().length > 0){
+  
+          // Se o campo senha estiver com a formatação correta.
+          if (password.test(VAL)) {
+            $(this).css("border-color", "green");
+            $('#text-senha').popover('hide')
+          }
+          // Se o campo senha estiver com a formatação incorreta.
+          else {
+            $(this).css("border-color", "red");
+            $('#text-senha').popover('show')
+          }
+        }
+        // Se o campo senha estiver vazio.
+        else {
+          $(this).css("border-color", "#4776a1");
+          $('#text-senha').popover('hide');
+          // Se o camppo confirmação for vazio.
+          if ($("#user_password_confirmation").val().length == 0){
+            $("#user_password_confirmation").css("border-color", "#4776a1");
+            $('#text-senhaconf').popover('hide');
+          }
+        }
+
+        // Se o campo confirmação de senha tiver algo.
+        if ($("#user_password_confirmation").val().length > 0){
+          // Se houver divergência de valores.
+          if ($(this).val() !== $("#user_password_confirmation").val()) {
+            $("#user_password_confirmation").css("border-color", "red");
+              $('#text-senhaconf').popover('show')
+          }
+  
+          // Se não houver divergência de valroes.
+          else {
+            $("#user_password_confirmation").css("border-color", "green");
+            $('#text-senhaconf').popover('hide')
+          }
+        }
+      });
+      // ---------------------------------------------------------------------------- 
+  
+      $("#user_password_confirmation").keyup(function() {
+  
+        // Se tiver algo no campo de confirmação.
+        if ($(this).val().length > 0){
+  
+          // Se houver divergência nos campos.
+          if ($(this).val() !== $("#user_password").val() ) {
+            $(this).css("border-color", "red");
+            $('#text-senhaconf').popover('show')
+          }
+  
+          // Se forem iguais.
+          else {
+            $(this).css("border-color", "green");
+            $('#text-senhaconf').popover('hide');
+          }
+        }
+  
+        // Se não tiver algo no campo confirmação.
+        else{
+          $(this).css("border-color", "#4776a1");
+          $('#text-senhaconf').popover('hide');
+         }
+       });
+    });
   </script>
 </body>
-
-</html>
